added few lessons

--- a/lessons/100-getting-started/100-linux-history.mdx
+++ b/lessons/100-getting-started/100-linux-history.mdx
@@ -1,6 +1,6 @@
 ---
-title: Linux History
-label: The History of Linux
+title: The History of Linux
+label: Linux History
 ---
 
 Hey rookie! So you decided to dive into this wonderful world known as Linux? Well you better strap in, because it’s gonna be a long and hard road. My name is Penguin Pete and I’m here to guide you through this journey. Let’s get started with a little bit of backstory about Linux.
