--- a/lessons/200-command-line/1200-mkdir.mdx
+++ b/lessons/200-command-line/1200-mkdir.mdx
@@ -1,6 +1,7 @@
-# mkdir (Make Directory)
-
-## Lesson Content
+---
+title: mkdir (Make Directory) command
+label: mkdir
+---
 
 We’re gonna need some directories to store all these files we’ve been working on. The mkdir command (Make Directory) is useful for that, it will create a directory if it doesn’t already exist. You can even make multiple directories at the same time.
 
