--- a/lessons/200-command-line/1900-exit.mdx
+++ b/lessons/200-command-line/1900-exit.mdx
@@ -1,8 +1,9 @@
-# exit
+---
+title: exit command
+label: exit
+---
 
-## Lesson Content
-
-Well, you sure did a good job getting through the basics. We’ve only scratched the surface, now that you’ve learned to crawl, in the next set of courses, I’m gonna teach how to walk. 
+Well, you sure did a good job getting through the basics. We’ve only scratched the surface, now that you’ve learned to crawl, in the next set of courses, I’m gonna teach how to walk.
 
 For now, you can pat yourself on the back and take a break. To exit from the shell, you can use the exit command
 
