--- a/lessons/200-command-line/800-less.mdx
+++ b/lessons/200-command-line/800-less.mdx
@@ -1,14 +1,15 @@
-# less
+---
+title: less command
+label: less
+---
 
-## Lesson Content
+If you are viewing text files larger than a simple output, less is more. (There is actually a command called more that does something similar, so this is ironic.) The text is displayed in a paged manner, so you can navigate through a text file page by page.
 
-If you are viewing text files larger than a simple output, less is more. (There is actually a command called more that does something similar, so this is ironic.) The text is displayed in a paged manner, so you can navigate through a text file page by page. 
-
-Go ahead and look at the contents of a file with less. Once you’re in the less command, you can actually use other keyboard commands to navigate in the file. 
+Go ahead and look at the contents of a file with less. Once you’re in the less command, you can actually use other keyboard commands to navigate in the file.
 
 <pre>$ less /home/pete/Documents/text1</pre>
 
-Use the following command to navigate through less: 
+Use the following command to navigate through less:
 
 <ul>
 <li>q - Used to quit out of less and go back to your shell.</li>
