--- a/lessons/200-command-line/1100-move.mdx
+++ b/lessons/200-command-line/1100-move.mdx
@@ -1,14 +1,15 @@
-# mv (Move)
+---
+title: mv (Move) command
+label: mv
+---
 
-## Lesson Content
-
-Used for moving files and also renaming them. Quite similar to the cp command in terms of flags and functionality. 
+Used for moving files and also renaming them. Quite similar to the cp command in terms of flags and functionality.
 
 You can rename files like this:
 
 <pre>$ mv oldfile newfile</pre>
 
-Or you can actually move a file to a different directory: 
+Or you can actually move a file to a different directory:
 
 <pre>$ mv file2 /home/pete/Documents</pre>
 
@@ -24,7 +25,7 @@ Like cp, if you mv a file or directory it will overwrite anything in the same di
 
 <pre>mv -i directory1 directory2</pre>
 
-Let’s say you did want to mv a file to overwrite the previous one. You can also make a backup of that file and it will just rename the old version with a ~. 
+Let’s say you did want to mv a file to overwrite the previous one. You can also make a backup of that file and it will just rename the old version with a ~.
 
 <pre>$ mv -b directory1 directory2</pre>
 
