--- a/lessons/200-command-line/1800-alias.mdx
+++ b/lessons/200-command-line/1800-alias.mdx
@@ -1,8 +1,9 @@
-# alias
+---
+title: alias command
+label: alias
+---
 
-## Lesson Content
-
-Sometimes typing commands can get really repetitive, or if you need to type a long command many times, it’s best to have an alias you can use for that. To create an alias for a command you simply specify an alias name and set it to the command. 
+Sometimes typing commands can get really repetitive, or if you need to type a long command many times, it’s best to have an alias you can use for that. To create an alias for a command you simply specify an alias name and set it to the command.
 
 <pre>$ alias foobar='ls -la'</pre>
 
@@ -12,7 +13,7 @@ Now instead of typing ls -la, you can type foobar and it will execute that comma
 
 or similar files if you want to have it persist after reboot.
 
-You can remove aliases with the unalias command: 
+You can remove aliases with the unalias command:
 
 <pre>$ unalias foobar</pre>
 
