--- a/lessons/200-command-line/400-ls.mdx
+++ b/lessons/200-command-line/400-ls.mdx
@@ -1,6 +1,7 @@
-# ls (List Directories)
-
-## Lesson Content
+---
+title: ls (List Directories) command
+label: ls
+---
 
 Now that we know how to move around the system, how do we figure out what is available to us? Right now it’s like we are moving around in the dark. Well, we can use the wonderful ls command to list directory contents. The ls command will list directories and files in the current directory by default, however you can specify which path you want to list the directories of.
 
@@ -9,11 +10,11 @@ $ ls /home/pete</pre>
 
 ls is a quite useful tool, it also shows you detailed information about the files and directories you are looking at.
 
-Also note that not all files in a directory will be visible. Filenames that start with . are hidden, you can view them however with the ls command and pass the -a flag to it (a for all). 
+Also note that not all files in a directory will be visible. Filenames that start with . are hidden, you can view them however with the ls command and pass the -a flag to it (a for all).
 
 <pre>$ ls -a</pre>
 
-There is also one more useful ls flag, -l for long, this shows a detailed list of files in a long format. This will show you detailed information, starting from the left: file permissions, number of links, owner name, owner group, file size, timestamp of last modification, and file/directory name. 
+There is also one more useful ls flag, -l for long, this shows a detailed list of files in a long format. This will show you detailed information, starting from the left: file permissions, number of links, owner name, owner group, file size, timestamp of last modification, and file/directory name.
 
 <pre>$ ls -l</pre>
 
