--- a/lessons/200-command-line/500-touch.mdx
+++ b/lessons/200-command-line/500-touch.mdx
@@ -1,23 +1,24 @@
-# touch
-
-## Lesson Content
+---
+title: touch command
+label: touch
+---
 
 Let’s learn how to make some files. A very simple way is to use the touch command. Touch allows you to the create new empty files.
 
 <pre>$ touch mysuperduperfile</pre>
 
-And boom, new file! 
+And boom, new file!
 
-Touch is also used to change timestamps on existing files and directories. Give it a try, do an ls -l on a file and note the timestamp, then touch that file and it will update the timestamp. 
+Touch is also used to change timestamps on existing files and directories. Give it a try, do an ls -l on a file and note the timestamp, then touch that file and it will update the timestamp.
 
 There are many other ways to create files that involve other things like redirection and text editors, but we’ll get to that in the Text Manipulation course.
 
 ## Exercise
 
 <ol>
-<li>Create a new file</li>
-<li>Note the timestamp</li>
-<li>Touch the file and check the timestamp once again</li>
+  <li>Create a new file</li>
+  <li>Note the timestamp</li>
+  <li>Touch the file and check the timestamp once again</li>
 </ol>
 
 ## Quiz Question
