--- a/lessons/100-getting-started/500-ubuntu.mdx
+++ b/lessons/100-getting-started/500-ubuntu.mdx
@@ -4,38 +4,18 @@ label: Ubuntu
 ---
 
 <h5>Overview</h5>
-<p>
-  One of the most popular Linux distributions for personal machines is Ubuntu.
-  Ubuntu also releases its own desktop environment manager Unity by default.
-</p>
+One of the most popular Linux distributions for personal machines is Ubuntu. Ubuntu
+also releases its own desktop environment manager Unity by default.
 
 <h5>Package Management</h5>
-<p>
-  Ubuntu is a Debian-based operating system developed by Canonical. So it uses a
-  core Debian package management system.
-</p>
+Ubuntu is a Debian-based operating system developed by Canonical. So it uses a core
+Debian package management system.
 
 <h5>Configurability</h5>
-<p>
-  Ubuntu is a great choice for a beginner who wants to get into Linux. Ubuntu
-  offers ease of use and a great user interface experience that has led to its
-  wide adoption. It’s widely used and supported and is most like other operating
-  systems like OSX and Windows in terms of usability.
-</p>
+Ubuntu is a great choice for a beginner who wants to get into Linux. Ubuntu offers
+ease of use and a great user interface experience that has led to its wide adoption.
+It’s widely used and supported and is most like other operating systems like OSX
+and Windows in terms of usability.
 
 <h5>Uses</h5>
-<p>Great for any platform, desktop, laptop and server.</p>
-
-## Exercise
-
-If you're interested in having Ubuntu as your operating system, head over to the installation section and give it a try:
-
-<a href="http://www.ubuntu.com/">http://www.ubuntu.com/</a>
-
-## Quiz Questions
-
-What operating system is Ubuntu based off of?
-
-## Quiz Answer
-
-Debian
+Great for any platform, desktop, laptop and server.
