--- a/lessons/100-getting-started/600-fedora.mdx
+++ b/lessons/100-getting-started/600-fedora.mdx
@@ -3,31 +3,19 @@ title: Fedora
 label: Fedora
 ---
 
-<b>Overview</b>
+<h5>Overview</h5>
 Backed by Red Hat, the Fedora Project is community driven containing open-source
 and free software. Red Hat Enterprise Linux branches off Fedora, so think of Fedora
 as an upstream RHEL operating system. Eventually RHEL will get updates from Fedora
 after thorough testing and quality assurance. Think of Fedora as an Ubuntu equivalent
 that uses a Red Hat backend instead of Debian.
 
-<b>Package Management</b>
+<h5>Package Management</h5>
 Uses Red Hat package manager.
 
-<b>Configurability</b>
+<h5>Configurability</h5>
 If you want to use a Red Hat based operating system, this is a user friendly version.
 
-<b>Uses</b>
+<h5>Uses</h5>
 Fedora is great if you want a Red Hat based operating system without the price tag.
 Recommended for desktop and laptop.
-
-## Exercise
-
-If you're interested in having Fedora as your operating system, head over to the installation section and give it a try: <a href='https://getfedora.org/'>https://getfedora.org/</a>
-
-## Quiz Questions
-
-What is RHEL branched off of?
-
-## Quiz Answer
-
-Fedora
