--- a/lessons/100-getting-started/1000-openSUSE.mdx
+++ b/lessons/100-getting-started/1000-openSUSE.mdx
@@ -3,34 +3,22 @@ title: openSUSE
 label: openSUSE
 ---
 
-<b>Overview</b>
+<h5>Overview</h5>
 openSUSE Linux is created by the openSUSE Project. A community that promotes the
 use of Linux everywhere, working together in an open, transparent and friendly manner
 as part of the worldwide Free and Open Source Software community. openSUSE is the
 second oldest still running Linux Distributions and shares the base system with SUSE's
 award-winning SUSE Linux Enterprise products.
 
-<b>Package Management</b>
+<h5>Package Management</h5>
 Uses RPM package manager.
 
-<b>Configurability</b>
+<h5>Configurability</h5>
 openSUSE is a great choice for a new Linux user. It offers an easy to use graphical
 installer/administration application (<a href="http://yast.github.io/">YaST</a>)
 and a tiday base system, easy to tinker with. openSUSE includes everything you need
 to enjoy the Internet worry free of viruses/spy-ware and to live out your creativity,
 be it with your photos, videos, music or code.
 
-<b>Uses</b>
+<h5>Uses</h5>
 openSUSE Leap is fully capable of being used on a desktop PC and laptop.
-
-## Exercise
-
-If you're interested in having openSUSE as your operating system, head over to the download page and give it a try: <a href='https://software.opensuse.org/'>software.opensuse.org</a>
-
-## Quiz Questions
-
-What is the name of openSUSE's Administration/Installation Tool?
-
-## Quiz Answer
-
-yast
