--- a/lessons/100-getting-started/300-debian.mdx
+++ b/lessons/100-getting-started/300-debian.mdx
@@ -3,33 +3,32 @@ title: Debian
 label: Debian
 ---
 
-<b>Overview</b>
-Debian is an operating system composed entirely of free and open-source software.
-It’s widely known and has been in development for over 20 years. There are three
-branches that you can use, Stable, Testing and Unstable.{" "}
+<h5>Overview</h5>
+<p>
+  Debian is an operating system composed entirely of free and open-source
+  software. It’s widely known and has been in development for over 20 years.
+  There are three branches that you can use, Stable, Testing and Unstable.
+  Stable is an overall good branch to be on. Testing and Unstable are rolling
+  releases. This means that any incremental changes in those branches will
+  eventually become Stable. For example, if you wanted to get to the next update
+  from Windows 8 to Windows 10, you’ll have to do a complete Windows 10
+  installation. However being on the Testing release, you’ll automatically get
+  updates until it becomes the next operating system release without having to
+  do a full installation.
+</p>
 
-Stable is an overall good branch to be on. Testing and Unstable are rolling releases. This means that any incremental changes in those branches will eventually become Stable. For example, if you wanted to get to the next update from Windows 8 to Windows 10, you’ll have to do a complete Windows 10 installation. However being on the Testing release, you’ll automatically get updates until it becomes the next operating system release without having to do a full installation.
+<h5>Package Management</h5>
+<p>
+  Debian also uses Debian package management tools. Every Linux distribution
+  installs and manages packages differently and they use different package
+  management tools. We’ll get more into this in a later course.
+</p>
 
-<b>Package Management</b>
-Debian also uses Debian package management tools. Every Linux distribution installs
-and manages packages differently and they use different package management tools.
-We’ll get more into this in a later course.{" "}
+<h5>Configurability</h5>
+<p>
+  Debian may not get the latest updates, but it's extremely stable. If you want
+  a good "core" operating system, this is the one for you.
+</p>
 
-<b>Configurability</b>
-Debian may not get the latest updates, but it's extremely stable. If you want a good
-"core" operating system, this is the one for you.
-
-<b>Uses</b>
-Debian is an overall great operating system for any platform.
-
-## Exercise
-
-If you're interested in having Debian as your operating system, head over to the installation section and give it a try: <a href='https://www.debian.org/'>https://www.debian.org/</a>
-
-## Quiz Question
-
-What kind of release does Testing and Unstable have?
-
-## Quiz Answer
-
-Rolling
+<h5>Uses</h5>
+<p>Debian is an overall great operating system for any platform.</p>
