--- a/lessons/100-getting-started/700-linux-mint.mdx
+++ b/lessons/100-getting-started/700-linux-mint.mdx
@@ -3,30 +3,18 @@ title: Linux Mint
 label: Linux Mint
 ---
 
-<b>Overview</b>
+<h5>Overview</h5>
 Linux Mint is based off of Ubuntu. It uses Ubuntu’s software repositories so the
 same packages are available on both distributions. Linux Mint is preferred by others
 over Ubuntu because it doesn’t come with some of the proprietary software that Ubuntu
 includes such as Unity.
 
-<b>Package Management</b>
+<h5>Package Management</h5>
 Since Linux Mint is Ubuntu based, it uses the Debian package manager.
 
-<b>Configurability</b>
+<h5>Configurability</h5>
 Great user interface, great for beginners and less bloated than Ubuntu. In this course,
 I’ll be using Linux Mint, but any other distribution can be used.{" "}
 
-<b>Uses</b>
+<h5>Uses</h5>
 Great for desktop and laptop.
-
-## Exercise
-
-If you're interested in having Linux Mint as your operating system, head over to the installation section and give it a try: <a href='http://linuxmint.com/'>http://linuxmint.com/</a>
-
-## Quiz Questions
-
-What is Linux Mint based off of?
-
-## Quiz Answer
-
-Ubuntu
