--- a/lessons/200-command-line/100-shell.mdx
+++ b/lessons/200-command-line/100-shell.mdx
@@ -9,27 +9,15 @@ In this course we will use the shell program bash (Bourne Again shell), almost a
 
 Let’s jump right in! Depending on the distribution your shell prompt might change, but for the most part it should adhere to the following format:
 
-<pre>username@hostname:current_directory pete@icebox:/home/pete $</pre>
+```bash
+username@hostname:current_directory
+pete@icebox:/home/pete $
+```
 
 Notice the $ at the end of the prompt? Different shells will have different prompts, in our case the $ is for a normal user using Bash, Bourne or Korn shell, you don't add the prompt symbol when you type the command, just know that it's there.
 
 Let’s start with a simple command, echo. The echo command just prints out the text arguments to the display.
 
-<pre>$ echo Hello World</pre>
-
-## Exercise
-
-Try some other Linux commands and see what they output:
-
-<ol>
-  <li>$ date</li>
-  <li>$ whoami</li>
-</ol>
-
-## Quiz Question
-
-What should be outputted to the display when you type echo Hello World?
-
-## Quiz Answer
-
-Hello World
+```bash
+$ echo Hello World
+```
