added search bar

--- a/lessons/200-command-line/1200-mkdir.mdx
+++ b/lessons/200-command-line/1200-mkdir.mdx
@@ -1,6 +1,6 @@
 ---
 title: mkdir (Make Directory) command
-label: mkdir
+label: mkdir (Make Directory)
 ---
 
 We’re gonna need some directories to store all these files we’ve been working on. The mkdir command (Make Directory) is useful for that, it will create a directory if it doesn’t already exist. You can even make multiple directories at the same time.
@@ -10,15 +10,3 @@ We’re gonna need some directories to store all these files we’ve been workin
 You can also create subdirectories at the same time with the -p (parent flag).
 
 <pre>$ mkdir -p books/hemmingway/favorites</pre>
-
-## Exercise
-
-Make a couple of directories and move some files into that directory.
-
-## Quiz Question
-
-What command is use to make a directory?
-
-## Quiz Answer
-
-mkdir
