--- a/lessons/200-command-line/1300-rm.mdx
+++ b/lessons/200-command-line/1300-rm.mdx
@@ -1,6 +1,6 @@
 ---
 title: rm (Remove) command
-label: rm
+label: rm (Remove)
 ---
 
 Now I think we have too many files, let’s remove some files. To remove files you can use the rm command. The rm (remove) command is used to delete files and directories.
@@ -28,16 +28,3 @@ You can’t just rm a directory by default, you’ll need to add the -r flag (re
 You can remove a directory with the rmdir command.
 
 <pre>$ rmdir directory</pre>
-
-## Exercise
-
-<ol>
-<li>Create a file called -file (don't forget the dash!).</li>
-<li>Remove that file.</li>
-</ol>
-
-## Quiz Question
-
-How do you remove a file called myfile?
-
-## Quiz Answer
