--- a/lessons/200-command-line/200-pwd.mdx
+++ b/lessons/200-command-line/200-pwd.mdx
@@ -1,6 +1,6 @@
 ---
 title: pwd (Print Working Directory) command
-label: pwd
+label: pwd (Print Working Directory)
 ---
 
 Everything in Linux is a file, as you journey deeper into Linux you’ll understand this, but for now just keep that in mind. Every file is organized in a hierarchical directory tree. The first directory in the filesystem is aptly named the root directory. The root directory has many folders and files which you can store more folders and files, etc. Here is an example of what the directory tree looks like:
