--- a/lessons/200-command-line/300-cd.mdx
+++ b/lessons/200-command-line/300-cd.mdx
@@ -1,6 +1,6 @@
 ---
-title: cd (Change Directory)
-label: cd
+title: cd (Change Directory) command
+label: cd (Change Directory)
 ---
 
 Now that you know where you are, let’s see if we can move around the filesystem a bit. Remember we’ll need to navigate our way using paths. There are two different ways to specify a path, with absolute and relative paths.
