--- a/lessons/200-command-line/1000-cp.mdx
+++ b/lessons/200-command-line/1000-cp.mdx
@@ -1,6 +1,6 @@
 ---
 title: cp (Copy) command
-label: cp
+label: cp (Copy)
 ---
 
 Let’s start making some copies of these files. Much like copy and pasting files in other operating systems, the shell gives us an even simpler way of doing that.
@@ -12,9 +12,12 @@ mycoolfile is the file you want to copy and /home/pete/Documents/cooldocs is whe
 You can copy multiple files and directories as well as use wildcards. A wildcard is a character that can be substituted for a pattern based selection, giving you more flexibility with searches. You can use wildcards in every command for more flexibility.
 
 <ul>
-<li>* the wildcard of wildcards, it's used to represent all single characters or any string.</li>
-<li>? used to represent one character</li>
-<li>[] used to represent any character within the brackets</li>
+  <li>
+    * the wildcard of wildcards, it's used to represent all single characters or
+    any string.
+  </li>
+  <li>? used to represent one character</li>
+  <li>[] used to represent any character within the brackets</li>
 </ul>
 
 <pre>$ cp *.jpg /home/pete/Pictures</pre>
@@ -30,15 +33,3 @@ Try to do a cp on a directory that contains a couple of files to your Documents 
 One thing to note, if you copy a file over to a directory that has the same filename, the file will be overwritten with whatever you are copying over. This is no bueno if you have a file that you don’t want to get accidentally overwritten. You can use the -i flag (interactive) to prompt you before overwriting a file.
 
 <pre>$ cp -i mycoolfile /home/pete/Pictures</pre>
-
-## Exercise
-
-Copy over a couple of files, be careful not to overwrite anything important.
-
-## Quiz Question
-
-What flag do you need to specify to copy over a directory?
-
-## Quiz Answer
-
--r
