--- a/lessons/200-command-line/1100-move.mdx
+++ b/lessons/200-command-line/1100-move.mdx
@@ -1,6 +1,6 @@
 ---
 title: mv (Move) command
-label: mv
+label: mv (Move)
 ---
 
 Used for moving files and also renaming them. Quite similar to the cp command in terms of flags and functionality.
@@ -28,15 +28,3 @@ Like cp, if you mv a file or directory it will overwrite anything in the same di
 Let’s say you did want to mv a file to overwrite the previous one. You can also make a backup of that file and it will just rename the old version with a ~.
 
 <pre>$ mv -b directory1 directory2</pre>
-
-## Exercise
-
-Rename a file, then move that file to a different directory.
-
-## Quiz Question
-
-How do you rename a file called cat to dog?
-
-## Quiz Answer
-
-mv cat dog
