--- a/lessons/200-command-line/1600-man.mdx
+++ b/lessons/200-command-line/1600-man.mdx
@@ -1,6 +1,6 @@
 ---
 title: man (Manual) command
-label: man
+label: man (Manual)
 ---
 
 Gee I wish some of these programs had a manual so we can see some more information about them. Well luckily they do! Aptly named man pages, you can see the manuals for a command with the man command.
@@ -10,15 +10,3 @@ Gee I wish some of these programs had a manual so we can see some more informati
 Man pages are manuals that are by default built into most Linux operating systems. They provide documentation about commands and other aspects of the system.
 
 Try it out on a few commands to get more information about them.
-
-## Exercise
-
-Run the man command on the ls command.
-
-## Quiz Question
-
-How do you see the manuals for a command?
-
-## Quiz Answer
-
-man
