updated color scheme

--- a/lessons/100-getting-started/500-ubuntu.mdx
+++ b/lessons/100-getting-started/500-ubuntu.mdx
@@ -4,18 +4,24 @@ label: Ubuntu
 ---
 
 <h5>Overview</h5>
-One of the most popular Linux distributions for personal machines is Ubuntu. Ubuntu
-also releases its own desktop environment manager Unity by default.
+<p>
+  One of the most popular Linux distributions for personal machines is Ubuntu.
+  Ubuntu also releases its own desktop environment manager Unity by default.
+</p>
 
 <h5>Package Management</h5>
-Ubuntu is a Debian-based operating system developed by Canonical. So it uses a core
-Debian package management system.
+<p>
+  Ubuntu is a Debian-based operating system developed by Canonical. So it uses a
+  core Debian package management system.
+</p>
 
 <h5>Configurability</h5>
-Ubuntu is a great choice for a beginner who wants to get into Linux. Ubuntu offers
-ease of use and a great user interface experience that has led to its wide adoption.
-It’s widely used and supported and is most like other operating systems like OSX
-and Windows in terms of usability.
+<p>
+  Ubuntu is a great choice for a beginner who wants to get into Linux. Ubuntu
+  offers ease of use and a great user interface experience that has led to its
+  wide adoption. It’s widely used and supported and is most like other operating
+  systems like OSX and Windows in terms of usability.
+</p>
 
 <h5>Uses</h5>
-Great for any platform, desktop, laptop and server.
+<p>Great for any platform, desktop, laptop and server.</p>
