--- a/lessons/100-getting-started/600-fedora.mdx
+++ b/lessons/100-getting-started/600-fedora.mdx
@@ -4,18 +4,25 @@ label: Fedora
 ---
 
 <h5>Overview</h5>
-Backed by Red Hat, the Fedora Project is community driven containing open-source
-and free software. Red Hat Enterprise Linux branches off Fedora, so think of Fedora
-as an upstream RHEL operating system. Eventually RHEL will get updates from Fedora
-after thorough testing and quality assurance. Think of Fedora as an Ubuntu equivalent
-that uses a Red Hat backend instead of Debian.
+<p>
+  Backed by Red Hat, the Fedora Project is community driven containing
+  open-source and free software. Red Hat Enterprise Linux branches off Fedora,
+  so think of Fedora as an upstream RHEL operating system. Eventually RHEL will
+  get updates from Fedora after thorough testing and quality assurance. Think of
+  Fedora as an Ubuntu equivalent that uses a Red Hat backend instead of Debian.
+</p>
 
 <h5>Package Management</h5>
-Uses Red Hat package manager.
+<p>Uses Red Hat package manager.</p>
 
 <h5>Configurability</h5>
-If you want to use a Red Hat based operating system, this is a user friendly version.
+<p>
+  If you want to use a Red Hat based operating system, this is a user friendly
+  version.
+</p>
 
 <h5>Uses</h5>
-Fedora is great if you want a Red Hat based operating system without the price tag.
-Recommended for desktop and laptop.
+<p>
+  Fedora is great if you want a Red Hat based operating system without the price
+  tag. Recommended for desktop and laptop.
+</p>
