--- a/lessons/100-getting-started/800-gentoo.mdx
+++ b/lessons/100-getting-started/800-gentoo.mdx
@@ -4,17 +4,24 @@ label: Gentoo
 ---
 
 <h5>Overview</h5>
-Gentoo offers ridiculous flexibility with the operating system at a price. It’s made
-for advanced users who don’t mind getting their hands dirty with the system.
+<p>
+  Gentoo offers ridiculous flexibility with the operating system at a price.
+  It’s made for advanced users who don’t mind getting their hands dirty with the
+  system.
+</p>
 
 <h5>Package Management</h5>
-Gentoo uses its own package management, Portage. The Portage package management is
-very modular and easy to maintain, which plays a big part in the operating system
-as a whole being very flexible.
+<p>
+  Gentoo uses its own package management, Portage. The Portage package
+  management is very modular and easy to maintain, which plays a big part in the
+  operating system as a whole being very flexible.
+</p>
 
 <h5>Configurability</h5>
-If you’re just getting started with Linux and want to take a more difficult path,
-I’d choose Gentoo or Arch Linux as your distribution.
+<p>
+  If you’re just getting started with Linux and want to take a more difficult
+  path, I’d choose Gentoo or Arch Linux as your distribution.
+</p>
 
 <h5>Uses</h5>
-Great for desktop and laptop.
+<p>Great for desktop and laptop.</p>
