--- a/lessons/100-getting-started/700-linux-mint.mdx
+++ b/lessons/100-getting-started/700-linux-mint.mdx
@@ -4,17 +4,21 @@ label: Linux Mint
 ---
 
 <h5>Overview</h5>
-Linux Mint is based off of Ubuntu. It uses Ubuntu’s software repositories so the
-same packages are available on both distributions. Linux Mint is preferred by others
-over Ubuntu because it doesn’t come with some of the proprietary software that Ubuntu
-includes such as Unity.
+<p>
+  Linux Mint is based off of Ubuntu. It uses Ubuntu’s software repositories so
+  the same packages are available on both distributions. Linux Mint is preferred
+  by others over Ubuntu because it doesn’t come with some of the proprietary
+  software that Ubuntu includes such as Unity.
+</p>
 
 <h5>Package Management</h5>
-Since Linux Mint is Ubuntu based, it uses the Debian package manager.
+<p>Since Linux Mint is Ubuntu based, it uses the Debian package manager.</p>
 
 <h5>Configurability</h5>
-Great user interface, great for beginners and less bloated than Ubuntu. In this course,
-I’ll be using Linux Mint, but any other distribution can be used.{" "}
+<p>
+  Great user interface, great for beginners and less bloated than Ubuntu. In
+  this course, I’ll be using Linux Mint, but any other distribution can be used.
+</p>
 
 <h5>Uses</h5>
-Great for desktop and laptop.
+<p>Great for desktop and laptop.</p>
