--- a/lessons/200-command-line/400-ls.mdx
+++ b/lessons/200-command-line/400-ls.mdx
@@ -6,7 +6,9 @@ label: ls (List Directories)
 Now that we know how to move around the system, how do we figure out what is available to us? Right now it’s like we are moving around in the dark. Well, we can use the wonderful ls command to list directory contents. The ls command will list directories and files in the current directory by default, however you can specify which path you want to list the directories of.
 
 ```bash
-$ ls $ ls /home/pete
+$ ls
+
+$ ls /home/pete
 ```
 
 ls is a quite useful tool, it also shows you detailed information about the files and directories you are looking at.
