--- a/lessons/100-getting-started/1000-openSUSE.mdx
+++ b/lessons/100-getting-started/1000-openSUSE.mdx
@@ -19,11 +19,11 @@ label: openSUSE
 <h5>Configurability</h5>
 <p>
   openSUSE is a great choice for a new Linux user. It offers an easy to use
-  graphical installer/administration application (
-  <a href="http://yast.github.io/">YaST</a>) and a tiday base system, easy to
-  tinker with. openSUSE includes everything you need to enjoy the Internet worry
-  free of viruses/spy-ware and to live out your creativity, be it with your
-  photos, videos, music or code.
+  graphical installer/administration application
+  ([YaST](http://yast.github.io/)) and a tiday base system, easy to tinker with.
+  openSUSE includes everything you need to enjoy the Internet worry free of
+  viruses/spy-ware and to live out your creativity, be it with your photos,
+  videos, music or code.
 </p>
 
 <h5>Uses</h5>
