added lesson sidebar

--- a/lessons/100-getting-started/600-fedora.mdx
+++ b/lessons/100-getting-started/600-fedora.mdx
@@ -3,26 +3,22 @@ title: Fedora
 label: Fedora
 ---
 
-<h5>Overview</h5>
-<p>
-  Backed by Red Hat, the Fedora Project is community driven containing
-  open-source and free software. Red Hat Enterprise Linux branches off Fedora,
-  so think of Fedora as an upstream RHEL operating system. Eventually RHEL will
-  get updates from Fedora after thorough testing and quality assurance. Think of
-  Fedora as an Ubuntu equivalent that uses a Red Hat backend instead of Debian.
-</p>
+##### Overview
 
-<h5>Package Management</h5>
-<p>Uses Red Hat package manager.</p>
+Backed by Red Hat, the Fedora Project is community driven containing open-source and free software. Red Hat Enterprise
+Linux branches off Fedora, so think of Fedora as an upstream RHEL operating system. Eventually RHEL will get updates
+from Fedora after thorough testing and quality assurance. Think of Fedora as an Ubuntu equivalent that uses a Red Hat
+backend instead of Debian.
 
-<h5>Configurability</h5>
-<p>
-  If you want to use a Red Hat based operating system, this is a user friendly
-  version.
-</p>
+##### Package Management
 
-<h5>Uses</h5>
-<p>
-  Fedora is great if you want a Red Hat based operating system without the price
-  tag. Recommended for desktop and laptop.
-</p>
+Uses Red Hat package manager.
+
+##### Configurability
+
+If you want to use a Red Hat based operating system, this is a user friendly version.
+
+##### Uses
+
+Fedora is great if you want a Red Hat based operating system without the price tag. Recommended for desktop and
+laptop.
