--- a/lessons/100-getting-started/400-redhat.mdx
+++ b/lessons/100-getting-started/400-redhat.mdx
@@ -3,28 +3,24 @@ title: Red Hat Enterpise Linux
 label: Red Hat Enterpise
 ---
 
-<h5>Overview</h5>
-<p>
-  Red Hat Enterprise Linux commonly referred to as RHEL is developed by Red Hat.
-  RHEL has strict rules to restrict free re-distribution although it still
-  provides source code for free.
-</p>
+##### Overview
 
-<h5>Package Management</h5>
-<p>
-  RHEL uses a different package manager than Debian, RPM package manager, which
-  we will eventually learn about as well.
-</p>
+Red Hat Enterprise Linux commonly referred to as RHEL is developed by Red Hat. RHEL
+has strict rules to restrict free re-distribution although it still provides source
+code for free.
 
-<h5>Configurability</h5>
-<p>
-  RHEL-based operating systems will differ slightly from the Debian-based
-  operating systems, most noticeably in package management. If you decide to go
-  with RHEL it’s probably best if you know you’ll be working with it.
-</p>
+##### Package Management
 
-<h5>Uses</h5>
-<p>
-  As described by the name it's mostly used in enterprise, so if you need a
-  solid server OS this would be a good one.
-</p>
+RHEL uses a different package manager than Debian, RPM package manager, which
+we will eventually learn about as well.
+
+##### Configurability
+
+RHEL-based operating systems will differ slightly from the Debian-based
+operating systems, most noticeably in package management. If you decide to go
+with RHEL it’s probably best if you know you’ll be working with it.
+
+##### Uses
+
+As described by the name it's mostly used in enterprise, so if you need a
+solid server OS this would be a good one.
