--- a/lessons/200-command-line/300-cd.mdx
+++ b/lessons/200-command-line/300-cd.mdx
@@ -16,7 +16,8 @@ Now that you know where you are, let’s see if we can move around the filesyste
     Relative path: This is the path from where you are currently in filesystem.
     If I was in location `/home/pete/Documents` and wanted to get to a directory
     inside Documents called `taxes`, I don’t have to specify the whole path from
-    root like `/home/pete/Documents/taxes`, I can just go to `taxes/` instead.
+    root like `/home/pete/Documents/taxes`, I can just go to `taxes/` or
+    `./taxes` instead.
   </li>
 </ul>
 
@@ -38,20 +39,16 @@ Notice how I just used the name of the folder? It’s because I was already in `
 
 It can get pretty tiring navigating with absolute and relative paths all the time, luckily there are some shortcuts to help you out.
 
-<ul className="pl-4">
-  <li>`.` (current directory). This is the directory you are currently in. </li>
-  <li>
-    `..` (previous directory). Takes you to the directory above your current.
-  </li>
-  <li>
-    `~` (home directory). This directory defaults to your “home directory”. Such
-    as /home/pete.
-  </li>
-  <li>
-    `-` (previous directory). This will take you to the previous directory you
-    were just at.
-  </li>
-</ul>
+<div className="relative overflow-x-auto my-6">
+
+| Command | Name               | Description                                                           |
+| ------- | ------------------ | --------------------------------------------------------------------- |
+| `.`     | Current Directory  | This is the directory you are currently in.                           |
+| `..`    | Previous Directory | Takes you to the directory above your current                         |
+| `~`     | Home Directory     | This directory defaults to your “home directory”. Such as /home/pete. |
+| `-`     | Previous Directory | This will take you to the previous directory you were just at.        |
+
+</div>
 
 ```bash
 $ cd .
