added lesson drawer & new search

--- a/lessons/100-getting-started/700-linux-mint.mdx
+++ b/lessons/100-getting-started/700-linux-mint.mdx
@@ -3,22 +3,22 @@ title: Linux Mint
 label: Linux Mint
 ---
 
-<h5>Overview</h5>
-<p>
-  Linux Mint is based off of Ubuntu. It uses Ubuntu’s software repositories so
-  the same packages are available on both distributions. Linux Mint is preferred
-  by others over Ubuntu because it doesn’t come with some of the proprietary
-  software that Ubuntu includes such as Unity.
-</p>
+##### Overview
 
-<h5>Package Management</h5>
-<p>Since Linux Mint is Ubuntu based, it uses the Debian package manager.</p>
+Linux Mint is based off of Ubuntu. It uses Ubuntu’s software repositories so
+the same packages are available on both distributions. Linux Mint is preferred
+by others over Ubuntu because it doesn’t come with some of the proprietary
+software that Ubuntu includes such as Unity.
 
-<h5>Configurability</h5>
-<p>
-  Great user interface, great for beginners and less bloated than Ubuntu. In
-  this course, I’ll be using Linux Mint, but any other distribution can be used.
-</p>
+##### Package Management
 
-<h5>Uses</h5>
-<p>Great for desktop and laptop.</p>
+Since Linux Mint is Ubuntu based, it uses the Debian package manager.
+
+##### Configurability
+
+Great user interface, great for beginners and less bloated than Ubuntu. In
+this course, I’ll be using Linux Mint, but any other distribution can be used.
+
+##### Uses
+
+Great for desktop and laptop
