--- a/lessons/200-command-line/800-less.mdx
+++ b/lessons/200-command-line/800-less.mdx
@@ -7,24 +7,20 @@ If you are viewing text files larger than a simple output, less is more. (There 
 
 Go ahead and look at the contents of a file with less. Once you’re in the less command, you can actually use other keyboard commands to navigate in the file.
 
-<pre>$ less /home/pete/Documents/text1</pre>
+```bash
+$ less /home/pete/Documents/text1
+```
 
 Use the following command to navigate through less:
 
 <ul>
-  <li>q - Used to quit out of less and go back to your shell.</li>
+  <li>`q` - Used to quit out of less and go back to your shell.</li>
+  <li>`Page up`, `Page down`, `Up` and `Down` - Navigate using the arrow keys and page keys.</li>
+  <li>`g` - Moves to beginning of the text file.</li>
+  <li>`G` - Moves to the end of the text file.</li>
   <li>
-    Page up, Page down, Up and Down - Navigate using the arrow keys and page
-    keys.
+    `/search` - You can search for specific text inside the text document. Prefacing the words you want to search with
+    `/`
   </li>
-  <li>g - Moves to beginning of the text file.</li>
-  <li>G - Moves to the end of the text file.</li>
-  <li>
-    /search - You can search for specific text inside the text document.
-    Prefacing the words you want to search with /
-  </li>
-  <li>
-    h - If you need a little help about how to use less while you’re in less,
-    use help.
-  </li>
+  <li>`h` - If you need a little help about how to use less while you’re in less, use help.</li>
 </ul>
