--- a/lessons/100-getting-started/1000-openSUSE.mdx
+++ b/lessons/100-getting-started/1000-openSUSE.mdx
@@ -3,28 +3,24 @@ title: openSUSE
 label: openSUSE
 ---
 
-<h5>Overview</h5>
-<p>
-  openSUSE Linux is created by the openSUSE Project. A community that promotes
-  the use of Linux everywhere, working together in an open, transparent and
-  friendly manner as part of the worldwide Free and Open Source Software
-  community. openSUSE is the second oldest still running Linux Distributions and
-  shares the base system with SUSE's award-winning SUSE Linux Enterprise
-  products.
-</p>
+##### Overview
 
-<h5>Package Management</h5>
-<p>Uses RPM package manager.</p>
+openSUSE Linux is created by the openSUSE Project. A community that promotes the use of Linux everywhere, working
+together in an open, transparent and friendly manner as part of the worldwide Free and Open Source Software community.
+openSUSE is the second oldest still running Linux Distributions and shares the base system with SUSE's award-winning
+SUSE Linux Enterprise products.
 
-<h5>Configurability</h5>
-<p>
-  openSUSE is a great choice for a new Linux user. It offers an easy to use
-  graphical installer/administration application
-  ([YaST](http://yast.github.io/)) and a tiday base system, easy to tinker with.
-  openSUSE includes everything you need to enjoy the Internet worry free of
-  viruses/spy-ware and to live out your creativity, be it with your photos,
-  videos, music or code.
-</p>
+##### Package Management
 
-<h5>Uses</h5>
-<p>openSUSE Leap is fully capable of being used on a desktop PC and laptop.</p>
+Uses RPM package manager.
+
+##### Configurability
+
+openSUSE is a great choice for a new Linux user. It offers an easy to use graphical installer/administration
+application ([YaST](http://yast.github.io/)) and a tiday base system, easy to tinker with. openSUSE includes
+everything you need to enjoy the Internet worry free of viruses/spy-ware and to live out your creativity, be it with
+your photos, videos, music or code.
+
+##### Uses
+
+openSUSE Leap is fully capable of being used on a desktop PC and laptop.
