--- a/lessons/100-getting-started/800-gentoo.mdx
+++ b/lessons/100-getting-started/800-gentoo.mdx
@@ -3,25 +3,21 @@ title: Gentoo
 label: Gentoo
 ---
 
-<h5>Overview</h5>
-<p>
-  Gentoo offers ridiculous flexibility with the operating system at a price.
-  It’s made for advanced users who don’t mind getting their hands dirty with the
-  system.
-</p>
+##### Overview
 
-<h5>Package Management</h5>
-<p>
-  Gentoo uses its own package management, Portage. The Portage package
-  management is very modular and easy to maintain, which plays a big part in the
-  operating system as a whole being very flexible.
-</p>
+Gentoo offers ridiculous flexibility with the operating system at a price. It’s made for advanced users who don’t mind
+getting their hands dirty with the system.
 
-<h5>Configurability</h5>
-<p>
-  If you’re just getting started with Linux and want to take a more difficult
-  path, I’d choose Gentoo or Arch Linux as your distribution.
-</p>
+##### Package Management
 
-<h5>Uses</h5>
-<p>Great for desktop and laptop.</p>
+Gentoo uses its own package management, Portage. The Portage package management is very modular and easy to maintain,
+which plays a big part in the operating system as a whole being very flexible.
+
+##### Configurability
+
+If you’re just getting started with Linux and want to take a more difficult path, I’d choose Gentoo or Arch Linux as
+your distribution.
+
+##### Uses
+
+Great for desktop and laptop.
