--- a/lessons/100-getting-started/900-arch-linux.mdx
+++ b/lessons/100-getting-started/900-arch-linux.mdx
@@ -3,31 +3,22 @@ title: Arch Linux
 label: Arch Linux
 ---
 
-<h5>Overview</h5>
-<p>
-  Arch is a lightweight and flexible Linux distribution driven 100% by the
-  community. Similar to Debian, Arch uses a rolling release model so incremental
-  updates eventually become the Stable release. You really need to get your
-  hands dirty to understand the system and its functions, but in turn you get
-  complete and total control of your system.
-</p>
+##### Overview
 
-<h5>Package Management</h5>
-<p>
-  It uses its own package manager, Pacman, to install, update and manage
-  packages.
-</p>
+Arch is a lightweight and flexible Linux distribution driven 100% by the community. Similar to Debian, Arch uses a
+rolling release model so incremental updates eventually become the Stable release. You really need to get your hands
+dirty to understand the system and its functions, but in turn you get complete and total control of your system.
 
-<h5>Configurability</h5>
-<p>
-  If you want a lightweight operating system and really want to understand Linux
-  use Arch! There’s a bit of a learning curve, but for the hardcore Linux users,
-  this is a great choice.
-</p>
+##### Package Management
 
-<h5>Uses</h5>
-<p>
-  Great for desktop and laptop. If you also have a small device such as a
-  Raspberry Pi and need to stick a lightweight OS on it, you can’t go wrong with
-  Arch.
-</p>
+It uses its own package manager, Pacman, to install, update and manage packages.
+
+##### Configurability
+
+If you want a lightweight operating system and really want to understand Linux use Arch! There’s a bit of a learning
+curve, but for the hardcore Linux users, this is a great choice.
+
+##### Uses
+
+Great for desktop and laptop. If you also have a small device such as a Raspberry Pi and need to stick a lightweight
+OS on it, you can’t go wrong with Arch.
