--- a/lessons/200-command-line/300-cd.mdx
+++ b/lessons/200-command-line/300-cd.mdx
@@ -7,17 +7,14 @@ Now that you know where you are, let’s see if we can move around the filesyste
 
 <ul className="pl-4">
   <li>
-    Absolute path: This is the path from the root directory. The root is the
-    head honcho. The root directory is commonly shown as a slash. Every time
-    your path starts with `/` it means you are starting from the root directory.
-    For example, `/home/pete/Desktop`.
+    Absolute path: This is the path from the root directory. The root is the head honcho. The root directory is commonly
+    shown as a slash. Every time your path starts with `/` it means you are starting from the root directory. For
+    example, `/home/pete/Desktop`.
   </li>
   <li>
-    Relative path: This is the path from where you are currently in filesystem.
-    If I was in location `/home/pete/Documents` and wanted to get to a directory
-    inside Documents called `taxes`, I don’t have to specify the whole path from
-    root like `/home/pete/Documents/taxes`, I can just go to `taxes/` or
-    `./taxes` instead.
+    Relative path: This is the path from where you are currently in filesystem. If I was in location
+    `/home/pete/Documents` and wanted to get to a directory inside Documents called `taxes`, I don’t have to specify the
+    whole path from root like `/home/pete/Documents/taxes`, I can just go to `taxes/` or `./taxes` instead.
   </li>
 </ul>
 
