updated readme and lessons

--- a/lessons/200-command-line/1300-rm.mdx
+++ b/lessons/200-command-line/1300-rm.mdx
@@ -5,7 +5,9 @@ label: rm (Remove)
 
 Now I think we have too many files, let’s remove some files. To remove files you can use the rm command. The rm (remove) command is used to delete files and directories.
 
-<pre>$ rm file1</pre>
+```bash
+$ rm file1
+```
 
 Take caution when using rm, there is no magical trash can that you can fish out removed files. Once they are gone, they are gone for good, so be careful.
 
@@ -13,18 +15,26 @@ Fortunately there are some safety measures put into place, so the average joe ca
 
 Now if you don’t care about any of that, you can absolutely remove a bunch of files.
 
-<pre>$ rm -f file1</pre>
+```bash
+$ rm -f file1
+```
 
 -f or force option tells rm to remove all files, whether they are write protected or not, without prompting the user (as long as you have the appropriate permissions).
 
-<pre>$ rm -i file</pre>
+```bash
+$ rm -i file
+```
 
 Adding the -i flag like many of the other commands, will give you a prompt on whether you want to actually remove the files or directories.
 
-<pre>$ rm -r directory</pre>
+```bash
+$ rm -r directory
+```
 
 You can’t just rm a directory by default, you’ll need to add the -r flag (recursive) to remove all the files and any subdirectories it may have.
 
 You can remove a directory with the rmdir command.
 
-<pre>$ rmdir directory</pre>
+```bash
+$ rmdir directory
+```
