--- a/lessons/200-command-line/1900-exit.mdx
+++ b/lessons/200-command-line/1900-exit.mdx
@@ -7,10 +7,14 @@ Well, you sure did a good job getting through the basics. We’ve only scratched
 
 For now, you can pat yourself on the back and take a break. To exit from the shell, you can use the exit command
 
-<pre>$ exit</pre>
+```bash
+$ exit
+```
 
 Or the logout command:
 
-<pre>$ logout</pre>
+```bash
+$ logout
+```
 
 Or if you are working out of a terminal GUI, you can just close the terminal, see you in the next course!
