--- a/lessons/200-command-line/1100-move.mdx
+++ b/lessons/200-command-line/1100-move.mdx
@@ -7,24 +7,36 @@ Used for moving files and also renaming them. Quite similar to the cp command in
 
 You can rename files like this:
 
-<pre>$ mv oldfile newfile</pre>
+```bash
+$ mv oldfile newfile
+```
 
 Or you can actually move a file to a different directory:
 
-<pre>$ mv file2 /home/pete/Documents</pre>
+```bash
+$ mv file2 /home/pete/Documents
+```
 
 And move more than one file:
 
-<pre>$ mv file_1 file_2 /somedirectory</pre>
+```bash
+$ mv file_1 file_2 /somedirectory
+```
 
 You can rename directories as well:
 
-<pre>$ mv directory1 directory2</pre>
+```bash
+$ mv directory1 directory2
+```
 
 Like cp, if you mv a file or directory it will overwrite anything in the same directory. So you can use the -i flag to prompt you before overwriting anything.
 
-<pre>mv -i directory1 directory2</pre>
+```bash
+$ mv -i directory1 directory2
+```
 
 Let’s say you did want to mv a file to overwrite the previous one. You can also make a backup of that file and it will just rename the old version with a ~.
 
-<pre>$ mv -b directory1 directory2</pre>
+```bash
+$ mv -b directory1 directory2
+```
