--- a/lessons/200-command-line/1600-man.mdx
+++ b/lessons/200-command-line/1600-man.mdx
@@ -5,7 +5,9 @@ label: man (Manual)
 
 Gee I wish some of these programs had a manual so we can see some more information about them. Well luckily they do! Aptly named man pages, you can see the manuals for a command with the man command.
 
-<pre>$ man ls</pre>
+```bash
+$ man ls
+```
 
 Man pages are manuals that are by default built into most Linux operating systems. They provide documentation about commands and other aspects of the system.
 
