replaced rehype-highlight with rehype-prism

--- a/lessons/200-command-line/100-shell.mdx
+++ b/lessons/200-command-line/100-shell.mdx
@@ -14,7 +14,7 @@ Let’s jump right in! Depending on the distribution your shell prompt might cha
 
 `username@hostname:current_directory`
 
-```bash
+```shell
 pete@icebox:/home/pete $
 ```
 
@@ -23,6 +23,6 @@ Bourne or Korn shell, you don't add the prompt symbol when you type the command,
 
 Let’s start with a simple command, echo. The echo command just prints out the text arguments to the display.
 
-```bash
+```shell
 $ echo Hello World
 ```
