--- a/lessons/200-command-line/1000-cp.mdx
+++ b/lessons/200-command-line/1000-cp.mdx
@@ -5,7 +5,7 @@ label: cp (Copy)
 
 Let’s start making some copies of these files. Much like copy and pasting files in other operating systems, the shell gives us an even simpler way of doing that.
 
-```bash
+```shell
 $ cp mycoolfile /home/pete/Documents/cooldocs
 ```
 
@@ -19,7 +19,7 @@ You can copy multiple files and directories as well as use wildcards. A wildcard
   <li>[] used to represent any character within the brackets</li>
 </ul>
 
-```bash
+```shell
 $ cp *.jpg /home/pete/Pictures
 ```
 
@@ -29,12 +29,12 @@ A useful command is to use the -r flag, this will recursively copy the files and
 
 Try to do a cp on a directory that contains a couple of files to your Documents directory. Didn’t work did it? Well that’s because you’ll need to copy over the files and directories inside as well with -r command.
 
-```bash
+```shell
 $ cp -r Pumpkin/ /home/pete/Documents
 ```
 
 One thing to note, if you copy a file over to a directory that has the same filename, the file will be overwritten with whatever you are copying over. This is no bueno if you have a file that you don’t want to get accidentally overwritten. You can use the -i flag (interactive) to prompt you before overwriting a file.
 
-```bash
+```shell
 $ cp -i mycoolfile /home/pete/Pictures
 ```
