--- a/lessons/200-command-line/1400-find.mdx
+++ b/lessons/200-command-line/1400-find.mdx
@@ -5,7 +5,7 @@ label: find
 
 With all these files we have on the system it can get a little hectic trying to find a specific one. Well there’s a command we can use for that, find!
 
-```bash
+```shell
 $ find /home -name puppies.jpg
 ```
 
@@ -13,7 +13,7 @@ With find you’ll have to specify the directory you’ll be searching it, what 
 
 You can specify what type of file you are trying to find.
 
-```bash
+```shell
 $ find /home -type d -name MyFolder
 ```
 
