--- a/lessons/200-command-line/1600-man.mdx
+++ b/lessons/200-command-line/1600-man.mdx
@@ -5,7 +5,7 @@ label: man (Manual)
 
 Gee I wish some of these programs had a manual so we can see some more information about them. Well luckily they do! Aptly named man pages, you can see the manuals for a command with the man command.
 
-```bash
+```shell
 $ man ls
 ```
 
