--- a/lessons/200-command-line/1700-whatis.mdx
+++ b/lessons/200-command-line/1700-whatis.mdx
@@ -5,7 +5,7 @@ label: whatis
 
 Whew, we’ve learned quite a bit of commands so far, if you are ever feeling doubtful about what a command does, you can use the whatis command. The whatis command provides a brief description of command line programs.
 
-```bash
+```shell
 $ whatis cat
 ```
 
