--- a/lessons/200-command-line/1900-exit.mdx
+++ b/lessons/200-command-line/1900-exit.mdx
@@ -7,13 +7,13 @@ Well, you sure did a good job getting through the basics. We’ve only scratched
 
 For now, you can pat yourself on the back and take a break. To exit from the shell, you can use the exit command
 
-```bash
+```shell
 $ exit
 ```
 
 Or the logout command:
 
-```bash
+```shell
 $ logout
 ```
 
