--- a/lessons/200-command-line/300-cd.mdx
+++ b/lessons/200-command-line/300-cd.mdx
@@ -15,7 +15,7 @@ Now that you know where you are, let’s see if we can move around the filesyste
 
 Now that you know how paths work, we just need something to help us change to the directory we want to. Luckily, we have cd or “change directory” to do that.
 
-```bash
+```shell
 $ cd /home/pete/Pictures
 ```
 
@@ -23,7 +23,7 @@ So now I've changed my directory location to /home/pete/Pictures.
 
 Now from this directory I have a folder inside called Hawaii, I can navigate to that folder with:
 
-```bash
+```shell
 $ cd Hawaii
 ```
 
@@ -42,7 +42,7 @@ It can get pretty tiring navigating with absolute and relative paths all the tim
 
 </div>
 
-```bash
+```shell
 $ cd .
 $ cd ..
 $ cd ~
