--- a/lessons/200-command-line/500-touch.mdx
+++ b/lessons/200-command-line/500-touch.mdx
@@ -5,7 +5,7 @@ label: touch
 
 Let’s learn how to make some files. A very simple way is to use the touch command. Touch allows you to the create new empty files.
 
-```bash
+```shell
 $ touch mysuperduperfile
 ```
 
