--- a/lessons/200-command-line/800-less.mdx
+++ b/lessons/200-command-line/800-less.mdx
@@ -7,7 +7,7 @@ If you are viewing text files larger than a simple output, less is more. (There 
 
 Go ahead and look at the contents of a file with less. Once you’re in the less command, you can actually use other keyboard commands to navigate in the file.
 
-```bash
+```shell
 $ less /home/pete/Documents/text1
 ```
 
