--- a/lessons/200-command-line/1200-mkdir.mdx
+++ b/lessons/200-command-line/1200-mkdir.mdx
@@ -5,12 +5,12 @@ label: mkdir (Make Directory)
 
 We’re gonna need some directories to store all these files we’ve been working on. The mkdir command (Make Directory) is useful for that, it will create a directory if it doesn’t already exist. You can even make multiple directories at the same time.
 
-```bash
+```shell
 $ mkdir books paintings
 ```
 
 You can also create subdirectories at the same time with the -p (parent flag).
 
-```bash
+```shell
 $ mkdir -p books/hemmingway/favorites
 ```
