--- a/lessons/200-command-line/1500-help.mdx
+++ b/lessons/200-command-line/1500-help.mdx
@@ -5,13 +5,13 @@ label: help
 
 Linux has some great built-in tools to help you how to use a command or check what flags are available for a command. One tool, help, is a built-in bash command that provides help for other bash commands (echo, logout, pwd, etc).
 
-```bash
+```shell
 $ help echo
 ```
 
 This will give you a description and the options you can use when you want to run echo. For other executable programs, it’s convention to have an option called --help or something similar.
 
-```bash
+```shell
 $ echo --help
 ```
 
