--- a/lessons/200-command-line/200-pwd.mdx
+++ b/lessons/200-command-line/200-pwd.mdx
@@ -5,7 +5,7 @@ label: pwd (Print Working Directory)
 
 Everything in Linux is a file, as you journey deeper into Linux you’ll understand this, but for now just keep that in mind. Every file is organized in a hierarchical directory tree. The first directory in the filesystem is aptly named the root directory. The root directory has many folders and files which you can store more folders and files, etc. Here is an example of what the directory tree looks like:
 
-```bash
+```shell
   /
   |-- bin
   |   |-- file1
@@ -23,7 +23,7 @@ The location of these files and directories are referred to as paths. If you had
 
 Navigation of the filesystem, much like real life is helpful if you know where you are and where you are going. To see where you are, you can use the pwd command, this command means “print working directory” and it just shows you which directory you are in, note the path stems from the root directory.
 
-```bash
+```shell
 $ pwd
 ```
 
