--- a/lessons/200-command-line/400-ls.mdx
+++ b/lessons/200-command-line/400-ls.mdx
@@ -8,7 +8,7 @@ Right now it’s like we are moving around in the dark. Well, we can use the won
 list directory contents. The `ls` command will list directories and files in the current directory by default,
 however you can specify which path you want to list the directories of.
 
-```bash
+```shell
 $ ls
 $ ls /home/pete
 ```
@@ -18,7 +18,7 @@ $ ls /home/pete
 Also note that not all files in a directory will be visible. Filenames that start with `.` are hidden,
 you can view them however with the `ls` command and pass the `-a` flag to it (`a` for all).
 
-```bash
+```shell
 $ ls -a
 ```
 
@@ -26,11 +26,11 @@ There is also one more useful ls flag, `-l` for long, this shows a detailed list
 This will show you detailed information, starting from the left: file permissions, number of links, owner name, owner group, file size,
 timestamp of last modification, and file/directory name.
 
-```bash
+```shell
 $ ls -l
 ```
 
-```bash
+```shell
 pete@icebox:~$ ls -l
 total 80
 drwxr-x--- 7  pete  penguingroup  4096  Nov 20 16:37  Desktop
@@ -45,6 +45,6 @@ drwxr-x--- 2  pete  penguingroup  4096  Jul 27 12:41  Videos
 
 Commands have things called flags (or arguments or options, whatever you want to call it) to add more functionality. See how we added -a and -l, well you can add them both together with -la. The order of the flags determines which order it goes in, most of the time this doesn’t really matter so you can also do ls -al and it would still work.
 
-```bash
+```shell
 $ ls -la
 ```
