--- a/lessons/200-command-line/600-file.mdx
+++ b/lessons/200-command-line/600-file.mdx
@@ -9,6 +9,6 @@ In Linux, filenames aren’t required to represent the contents of the file. You
 
 To find out what kind of file a file is, you can use the file command. It will show you a description of the file’s contents.
 
-```bash
+```shell
 $ file banana.jpg
 ```
