--- a/lessons/200-command-line/700-cat.mdx
+++ b/lessons/200-command-line/700-cat.mdx
@@ -5,7 +5,7 @@ label: cat
 
 We’re almost done navigating files, but first let’s learn how to read a file. A simple command to use is the cat command, short for concatenate, it not only displays file contents but it can combine multiple files and show you the output of them.
 
-```bash
+```shell
 $ cat dogfile birdfile
 ```
 
