--- a/lessons/200-command-line/100-shell.mdx
+++ b/lessons/200-command-line/100-shell.mdx
@@ -1,6 +1,6 @@
 ---
 title: Linux Shell
-label: Shell
+label: shell
 ---
 
 The world is your oyster, or really the shell is your oyster. What is the shell? The shell is basically a program that takes your commands from the
@@ -12,8 +12,6 @@ There are other shells available such as ksh, zsh, tsch, but we won’t get into
 
 Let’s jump right in! Depending on the distribution your shell prompt might change, but for the most part it should adhere to the following format:
 
-`username@hostname:current_directory`
-
 ```shell
 pete@icebox:/home/pete $
 ```
@@ -21,8 +19,15 @@ pete@icebox:/home/pete $
 Notice the `$` at the end of the prompt? Different shells will have different prompts, in our case the `$` is for a normal user using Bash,
 Bourne or Korn shell, you don't add the prompt symbol when you type the command, just know that it's there.
 
-Let’s start with a simple command, echo. The echo command just prints out the text arguments to the display.
+Let’s start with a simple command, `echo`. The `echo` command just prints out the text arguments to the display.
 
 ```shell
 $ echo Hello World
 ```
+
+##### Homework
+
+Try some other Linux commands and see what they output:
+
+1. `$ date`
+2. `$ whoami`
