--- a/lessons/200-command-line/300-cd.mdx
+++ b/lessons/200-command-line/300-cd.mdx
@@ -13,15 +13,15 @@ Now that you know where you are, let’s see if we can move around the filesyste
   `/home/pete/Documents` and wanted to get to a directory inside Documents called `taxes`, I don’t have to specify the
   whole path from root like `/home/pete/Documents/taxes`, I can just go to `taxes/` or `./taxes` instead.
 
-Now that you know how paths work, we just need something to help us change to the directory we want to. Luckily, we have cd or “change directory” to do that.
+Now that you know how paths work, we just need something to help us change to the directory we want to. Luckily, we have `cd` or “change directory” to do that.
 
 ```shell
 $ cd /home/pete/Pictures
 ```
 
-So now I've changed my directory location to /home/pete/Pictures.
+So now I've changed my directory location to `/home/pete/Pictures`.
 
-Now from this directory I have a folder inside called Hawaii, I can navigate to that folder with:
+Now from this directory I have a folder inside called `Hawaii`, I can navigate to that folder with:
 
 ```shell
 $ cd Hawaii
