--- a/lessons/200-command-line/400-ls.mdx
+++ b/lessons/200-command-line/400-ls.mdx
@@ -43,7 +43,9 @@ drwxr-x--- 2  pete  penguingroup  4096  Jul 27 12:41  Templates
 drwxr-x--- 2  pete  penguingroup  4096  Jul 27 12:41  Videos
 ```
 
-Commands have things called flags (or arguments or options, whatever you want to call it) to add more functionality. See how we added -a and -l, well you can add them both together with -la. The order of the flags determines which order it goes in, most of the time this doesn’t really matter so you can also do ls -al and it would still work.
+Commands have things called flags (or arguments or options, whatever you want to call it) to add more functionality. See how we added `-a` and `-l`,
+well you can add them both together with `-la`. The order of the flags determines which order it goes in, most of the time this doesn’t really matter
+so you can also do ls `-al` and it would still work.
 
 ```shell
 $ ls -la
