--- a/lessons/200-command-line/500-touch.mdx
+++ b/lessons/200-command-line/500-touch.mdx
@@ -11,6 +11,6 @@ $ touch mysuperduperfile
 
 And boom, new file!
 
-Touch is also used to change timestamps on existing files and directories. Give it a try, do an ls -l on a file and note the timestamp, then touch that file and it will update the timestamp.
+Touch is also used to change timestamps on existing files and directories. Give it a try, do an `ls -l` on a file and note the timestamp, then touch that file and it will update the timestamp.
 
 There are many other ways to create files that involve other things like redirection and text editors, but we’ll get to that in the Text Manipulation course.
